RESOLVED FIXED154794
SVGToOTFFontConversion.cpp does not compile with libstdc++ 4.8
https://bugs.webkit.org/show_bug.cgi?id=154794
Summary SVGToOTFFontConversion.cpp does not compile with libstdc++ 4.8
Konstantin Tokarev
Reported 2016-02-28 09:15:01 PST
Error message produced by clang 3.7 (g++ 4.8 also produces error, but message is less readable): /usr/bin/../lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_algo.h:2266:11: error: no matching function for call to object of type '(lambda at ../../../Source/WebCore/svg/SVGToOTFFontConversion.cpp:756:59)' while (__comp(__pivot, *__last)) ^~~~~~ ../../../Source/WebCore/svg/SVGToOTFFontConversion.cpp:756:59: note: candidate function not viable: 1st argument ('const std::pair<WTF::Vector<unsigned short, 3, WTF::CrashOnOverflow, 16>, unsigned short>') would lose const qualifier std::sort(ligaturePairs.begin(), ligaturePairs.end(), [](LigaturePair& lhs, LigaturePair& rhs) { ^ ../../../Source/WebCore/svg/SVGToOTFFontConversion.cpp:756:59: note: conversion candidate of type 'bool (*)(LigaturePair &, LigaturePair &)'
Attachments
Patch (1.60 KB, patch)
2016-02-28 09:37 PST, Konstantin Tokarev
no flags
Konstantin Tokarev
Comment 1 2016-02-28 09:37:38 PST
WebKit Commit Bot
Comment 2 2016-02-28 12:11:59 PST
Comment on attachment 272457 [details] Patch Clearing flags on attachment: 272457 Committed r197298: <http://trac.webkit.org/changeset/197298>
WebKit Commit Bot
Comment 3 2016-02-28 12:12:04 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.