SVGToOTFFontConversion.cpp does not compile with libstdc++ 4.8 https://bugs.webkit.org/show_bug.cgi?id=154794

Patch by Konstantin Tokarev <annulen@yandex.ru> on 2016-02-28
Reviewed by Michael Catanzaro.

No new tests needed.

* svg/SVGToOTFFontConversion.cpp:
(WebCore::SVGToOTFFontConverter::appendLigatureSubtable): Added const
qualifiers.

Canonical link: https://commits.webkit.org/172896@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@197298 268f45cc-cd09-0410-ab3c-d52691b4dbfc